# chessmate-prod

./: .bandit-baseline.json  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .gitleaks.toml  .mypy.ini  .pre-commit-config.yaml  2.0.0  API_SECURITY.md  Batch_analysis_report.txt  CHANGELOG.md  CONSOLIDATED_FIXES.md  Dockerfile  HOW_TO_RUN.md  INSTALLATION.md  LICENSE  PHASE_2A_API_VERIFICATION.md  PROJECT_COMPREHENSIVE_STATE.md  PROJECT_STATUS.md  README.md  README_API_TESTING.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_FIXES.md  SETUP_AND_TESTING.md  TESTING.md  WINDOWS_SETUP.md  __init__.py  analysis and feedback pipeline.md  analysis request response.txt  bandit_logs.txt  check_authentication.py  chess_mate.lnk  chessmate_v01_prd.md  codecov.yml  conftest.py  django_lint_pylint.txt  docker-compose.prod.yml  (+28 more)
.ebextensions/: 01_deploy_timeout.config  02_container_port.config
.github/: dependabot.yml  pull_request_template.md
chess_mate/: .coverage  CHANGELOG.md  PRODUCTION_CHECKLIST.md  PROJECT_STATUS.md  __init__.py  appendonly.aof  apps.py  conftest.py  create_superuser.py  current_models.py  current_schema.py  install_redis.bat  logfile  manage.py  package-lock.json  package.json  patch_and_run_celery.py  patch_celery.py  pytest.ini  redis.windows.conf  requirements.txt  run.bat  run_celery.bat  run_tests.bat  run_tests.py  run_tests.sh  run_worker.py  start_celery.bat  start_services.bat  start_worker.bat  test_connections.py  test_db.sqlite3  test_django.py  urls.py
docs/: CACHE_INVALIDATION.md  COST_AND_SCALING.md  DEPLOY_EB_ECR.md  PROD_OPS.md  (+12 more)
(+748 files in other folders)
